fix: update structure and schema removals

--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -1,3 +1,4 @@
 {
-  "fileNotFound": "File id does not exist"
+  "fileNotFound": "File id does not exist.",
+  "internalServerError": "Internal server error."
 }
