fix: file service swagger and added create file api

--- a/src/i18n/en/translation.json
+++ b/src/i18n/en/translation.json
@@ -1,4 +1,6 @@
 {
   "fileNotFound": "File id does not exist.",
-  "internalServerError": "Internal server error."
+  "accessTokenUnauthorized": "Access token is not authorized.",
+  "internalServerError": "Internal server error.",
+  "notHaveEnoughPermissions": "You do not have permission to execute this operation."
 }
